update photo about

--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -76,14 +76,18 @@
     Notre engagement de non-profit personnel signifie que les bénéfices réalisés par la société, au travers de son activité industrielle liée au don du sang, sont intégralement réutilisés pour le financement du projet de recherche qu’elle mène en collaboration avec l’EFS-BFC : aucun dividende n’est reversé au Président, fondateur de la société, ni à d’éventuels associés ou futurs investisseurs.
     <br><br>
     Les bilans comptables de la société sont transmis chaque année à un Comité de Surveillance indépendant qui peut ainsi vérifier le respect par Lymphobank de ses engagements éthiques et financiers.</p>
-    <h2>Notre équipe est composée 5 personnes expérimentées : </h2>
-    <img class="photo" src={{ asset ('img/equipe.JPG')}}>
+    <h2>Notre équipe est composée de 7 personnes expérimentées : </h2>
+    <img class="photo" src={{ asset ('img/EquipeLymphobank.JPG')}}>
     <ul class="equipe">
-        <li><strong>Marine DANGEVILLE :</strong> Responsable de production</li>
-        <li><strong>Lucie LAURENT </strong>: Technicienne de production en Biotechnologie</li>
-        <li><strong>Mathieu GONCALVES :</strong> Responsable Recherche & Développement</li>
-        <li><strong>Eric ROBINET :</strong> Direction</li>
-        <li><strong>Satya LEFRANC :</strong> Technicienne de production en Biotechnologie</li>
+        <li><strong>Eric Robinet :</strong> Fondateur</li>
+        <li><strong>Marine Dangeville :</strong> Responsable de production</li>
+        <li><strong>Mathieu Goncalves :</strong> Responsable Recherche et Développement</li>
+    </ul>
+    <ul class="equipe">
+        <li><strong>Lucie Laurent :</strong> Technicienne de production</li>
+        <li><strong>Inès Dbich :</strong> Manager de projet</li>
+        <li><strong>Déborah Morel :</strong> Technicienne de production</li>
+        <li><strong>Satya Lefranc :</strong> Technicienne de production</li>
     </ul>
     <h2>Domaine d’applications (principaux secteurs d’activités) :</h2>
     <div class="valeurs">
