update homeBanner tentative sitemap

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -18,7 +18,7 @@
 
 {% block body %}
     
-    <img class="homeBanner" src={{ asset ('img/homebanner.png')}}>
+    <img class="homeBanner" src={{ asset ('img/homeBanner.png')}}>
     
     <div class="content">
         <h1 class="homeTitle">Soutenez la recherche biomédicale par votre don de sang de cordon.</h1>
