--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -6,18 +6,27 @@
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('scss/contact') }}
+    <script src="https://www.google.com/recaptcha/api.js"></script>
 {% endblock %}
 
 {% block body %}
     <h1>Nous contacter</h1>
     <div class="form">
-        {{form_start (form)}}
+        {{form_start (form, {'attr': {'id': 'captcha'}} )}}
             {{form_row (form.firstName)}}
             {{form_row (form.lastName)}}
             {{form_row (form.mail)}}
             {{form_row (form.message)}}
-            <button class="submit">Envoyer</button>
+            <button class="g-recaptcha submit"
+                    data-sitekey="6LcrPY8eAAAAACbPI5955O4I3OU_YOa1wmcB90nV"
+                    data-callback='onSubmit'
+                    data-action='submit'>Envoyer</button>
         {{form_end (form)}}
+        <script>
+            function onSubmit(token) {
+                document.getElementById("captcha").submit();
+            }
+        </script>
     </div>
     
 {% endblock %}
