--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 
-{% block title %}Bienvenue !{% endblock %}
+{% block title %}Soutenez la recherche médicale !{% endblock %}
 
 
 {% block stylesheets %}
